--- a/css/style.css
+++ b/css/style.css
@@ -1,90 +1,378 @@
+@import url('https://fonts.googleapis.com/css2?family=Bitcount+Grid+Double:wght,ELSH@100..900,100&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
+/*================
+--- BASE ---
+*/
+
+/* Estilos generales */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 /* Paleta de colores */
 :root {
   --rojo-siman: #C8102E;
+  --rojo-siman-oscuro: #ab0823;
   --gris-oscuro: #333;
+  --gris-2: #908e8e;
   --gris-claro: #f5f5f5;
   --blanco: #fff;
+  --dark-color: #141414;
+}
+
+.html{
+    margin: 0%;
+    padding: 0%;
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
-  margin: 0;
-  background-color: var(--gris-claro);
-  color: var(--gris-oscuro);
-}
-
-h1, h2, h3 {
-  font-family: 'Montserrat', sans-serif;
-}
-
-header {
-  background-color: var(--rojo-siman);
-  color: var(--blanco);
-  padding: 1rem;
-}
-
-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-nav ul {
-  list-style: none;
-  display: flex;
-  gap: 1rem;
-}
-
-nav a {
-  color: var(--blanco);
-  text-decoration: none;
-}
-
-.hero {
-  text-align: center;
-  background-image: url('../img/banner.jpg');
+  background-image: url('../assets/img/imagen-fondo-tienda.avif');
   background-size: cover;
-  color: var(--blanco);
-  padding: 4rem 2rem;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
-.boton {
-  background-color: var(--rojo-siman);
-  color: var(--blanco);
-  padding: 0.8rem 1.5rem;
-  border: none;
-  text-decoration: none;
-  font-weight: bold;
+.container{
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 99vw;
+    width: 100vw;
+    text-align: center;
 }
 
-.promociones {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 2rem;
-  padding: 2rem;
+
+/*================
+---- HEADER ----
+================*/
+/* Header */
+.container .header{
+    width: 100%;
+    margin-top: 1vh;
+    background-color: var(--gris-claro);
+    padding: 0.8rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 0.5rem;
 }
 
-.promociones img {
-  width: 100%;
-  height: auto;
-  border-radius: 5px;
+.container .header .img-logo{
+  height: 6vh;
 }
 
-footer {
-  text-align: center;
-  padding: 1rem;
-  background-color: var(--gris-oscuro);
-  color: var(--blanco);
+.container .header .img-logo:hover{
+    cursor: pointer;
+}
+
+.container .header .navbar{
+    display: flex;
+    justify-content: space-between;
+    
+    gap: 0.9rem;
+
+}
+
+.container .header .navbar .nav-item:hover{
+    text-shadow: 0.07em 0.07em var(--gris-2);
+    transform: scale(1.3);
+}
+
+.container .header .navbar .nav-item{
+    font-weight: bold;
+    color: var(--rojo-siman);
+    text-decoration: none;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.1em;
+    transition: 0.5s;
+    transition: all 0.3s ease;
+
+}
+
+.container .header .img-container{
+    display: flex;
+    justify-content: left;
+    align-items: center;
+}
+
+
+/*================
+---- main container ----
+================*/
+/* main container */
+.container .main-container{
+    margin-top: 10vh;
+}
+
+
+/*================
+---- MAIN CONTAINER PROMOCIONES ----
+================*/
+.container .main-container .promociones-container{
+    margin-top: 8vh;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    padding: 1rem;
+}
+
+.container .main-container .promociones-container .card{
+    border-radius: 0.5rem;
+    width: 20rem;
+    height: 33rem
+}
+
+.container .main-container .promociones-container .card .card-img-top{
+    margin-top: 1vw;
+    width: 18rem;
+    height: 18rem    
+}
+
+.container .main-container .promociones-container .card .card-title{
+    margin-top: 2vh;
+    font-family: Roboto, sans-serif;
+    text-align: start;
+    font-weight: bold;
+}
+
+.container .main-container .promociones-container .card .card-text{
+    font-family: Roboto, sans-serif;
+    text-align: start;
+}
+
+.container .main-container .promociones-container .card a{
+    font-family: Roboto, sans-serif;
+    font-weight: bold;
+    font-size: 1.2em;
+}
+
+/*================
+---- MAIN CONTAINER CATEGORIAS ----
+================*/
+.container .main-container .categorias-container{
+    margin-top: 5vh;
+    display: flex;
+    flex-wrap: wrap;
+    grid-template-columns: 3fr 4fr 3fr;
+    justify-content: center;
+    gap: 1rem;
+    padding: 2rem;
+}
+
+.container .main-container .categorias-container .card-section{
+    grid-column: span 1; /* Por defecto ocupa 1 columna */
+    position: relative;
+    display: inline-block;
+}
+
+.container .main-container .categorias-container .card-section .img-categoria{
+    width: 60vh;
+    height: 103vh;
+    border-radius: 0.5rem;
+}
+
+.container .main-container .categorias-container .card-section .text-overlay{
+    position: absolute;
+    bottom: 1.2rem;
+    left: 1.2rem;
+    color: white;
+    font-size: 24px;
+    font-weight: bold;
+    text-shadow: 0.07em 0.07em rgba(0,0,0,0.8);
+    background-color: rgba(0,0,0,0.3); /* Fondo semitransparente */
+    padding: 1vh 1vh;
+    border-radius:0.5rem;
+}
+
+.container .main-container .categorias-container .card-section .img-categoria:hover{
+    transform: scale(1.02);
+}
+
+
+.container .main-container .categorias-container .card-section-double .card .img-categoria-double{
+    width: 80vh;
+    height: 50vh;
+    border-radius: 0.5rem;
+    position: relative;
+    display: inline-block;
+}
+
+.container .main-container .categorias-container .card-section-double .text-overlay{
+    position: absolute;
+    bottom: 1.2rem;
+    left: 1.2rem;
+    color: white;
+    font-size: 24px;
+    font-weight: bold;
+    text-shadow: 0.07em 0.07em rgba(0,0,0,0.8);
+    background-color: rgba(0,0,0,0.3); /* Fondo semitransparente */
+    padding: 1vh 1vh;
+    border-radius:0.5rem;
+}
+
+.container .main-container .categorias-container .card-section-double .card .img-categoria-double:hover{
+    transform: scale(1.02);
+}
+
+.container .main-container .categorias-container .card-section-double{
+    grid-column: span 1; 
+    display: grid;
+    grid-template-columns: 1fr; /* Cambia a 2 columnas internas si lo prefieres */
+    gap: 20px;
+}
+
+
+
+/*================
+---- FOOTER ----
+================*/
+/* Footer */
+.footer {
+    background: var(--rojo-siman);
+    color: #fff;
+    padding: 40px 0 0;
+    margin-top: 50px;
+}
+
+.footer .footer-content .footer-social .icon{
+    width: 2.7vw;
+    height: 2.7vw;
+}
+
+.footer-content {
+    max-width: 90vw;
+    margin: 0 auto;
+    padding: 0 20px;
+    display: flex;
+        
+    justify-content: space-between;
+    gap: 1em;
+}
+
+.footer .footer-content .footer-logo .img-logo{
+    width: 15vw;
+    height: 7vw;
+    border-radius: 0.5rem;
+}
+
+.footer-logo h2 {
+    font-size: 24px;
+    margin-bottom: 15px;
+    color: #f8f8f8;
+}
+
+.footer-social {
+    margin-top: 2vw;
+    display: flex;
+    gap: 15px;
+}
+
+.social-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    background: #555;
+    color: #fff;
+    border-radius: 50%;
+    font-size: 18px;
+    transition: all 0.3s ease;
+}
+
+.social-icon:hover {
+    background: #0077b5; /* Color según red social (opcional) */
+    transform: translateY(-3px);
+}
+
+.footer-links {
+    margin-top: 2vw;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+}
+
+.footer-links a {
+    color: #ddd;
+    text-decoration: none;
+    transition: color 0.3s;
+}
+
+.footer-links a:hover {
+    color: #fff;
+}
+
+.footer-bottom {
+    text-align: center;
+    padding: 20px;
+    margin-top: 40px;
+    background: Var(--rojo-siman-oscuro);
+    color: #fff;
+    font-size: 14px;
 }
 
 /* Responsive */
-@media screen and (max-width: 768px) {
-  nav ul {
-    flex-direction: column;
-    gap: 0.5rem;
-  }
+@media (max-width: 768px) {
+    .footer-content {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
 
-  .hero {
-    padding: 2rem 1rem;
-  }
+    .footer-social, .footer-links {
+        justify-content: center;
+    }
+}
+
+
+/*
+==================== SUSCRIBETE ====================
+*/
+
+
+
+/*
+==================== SUSCRIBETE ====================
+*/
+
+.container .main-container .hero .hero-title{
+    font-size: 3em;
+    font-family: Montserrat, sans-serif;
+    font-weight: bold;
+    color: var(--dark-color);
+    transition: all 0.3s ease;
+}
+
+.container .main-container .hero .hero-title:hover{
+    text-shadow: 0.06em 0.06em var(--rojo-siman);
+    transform: scale(1.1);
+}
+
+.container .main-container .suscribete-container{
+    display: flex;
+    justify-content: center;
+    background-color: var(--gris-claro);
+    margin-top: 8vh;
+    width: 40vw;
+    height: auto;
+    padding: 3em;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 0.5rem;
+}
+
+.container .main-container .suscribete-container .form-container{
+    text-align: left;
+    font-family: Roboto, sans-serif;
+    font-size: 1.1em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 60vh;
+    height: auto;
+    gap: 1em;
 }
